--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -4,6 +4,7 @@
   @include mixins.miter(2, 1);
   font-family: variables.$font--primary;
   outline: none; //needed for removing safari focus ring
+  position: relative;
   &.active {
     @include mixins.miter-shadow;
   }
