--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -16,6 +16,7 @@
   .picker {
     background-color: variables.$white;
     border: 1px solid variables.$grey-4;
+    border-radius: 4px;
     cursor: pointer;
     height: 58px;
     width: 350px;
@@ -67,11 +68,14 @@
       @include mixins.miter-clip(2, 1);
       margin-top: -16px;
       padding-top: 16px;
+      border-bottom-left-radius: 4px;
       > * &:last-child {
         @include mixins.miter-clip(2, 1);
       }
     }
     &.openUp {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
       bottom: 58px;
     }
     > * {
