--- a/src/styles/components/date-picker.scss
+++ b/src/styles/components/date-picker.scss
@@ -89,7 +89,7 @@ $grid-template-areas: 'Su Mo Tu We Th Fr Sa';
 
   .day {
     border: none;
-    color: variables.$text--primary;
+    color: variables.$grey-1;
     cursor: pointer;
     font-weight: bold;
     outline: none;
@@ -101,6 +101,7 @@ $grid-template-areas: 'Su Mo Tu We Th Fr Sa';
 
     &.today {
       border: 2px solid variables.$primary;
+      color: variables.$primary;
     }
 
     &.selected-day {
@@ -110,12 +111,12 @@ $grid-template-areas: 'Su Mo Tu We Th Fr Sa';
 
     &.next-month,
     &.previous-month {
-      background-color: variables.$grey-5;
-      color: variables.$text--primary;
+      color: variables.$text--secondary;
 
       &:hover,
       &:focus {
-        background-color: variables.$grey-4;
+        color: variables.$grey-1;
+        background-color: variables.$grey-3;
       }
 
       &.current-day {
