add label text color

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $text--primary: #465968;
 $text--secondary: #cecdd3;
 $text--placeholder: #465968;
 $text--white: #ffffff;
+$text--black: #52575C;
 
 $inactive: #cecdd3;
 $disabled: #f5f4fa;
