--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -12,4 +12,6 @@
 .input-label {
     display:block;
     font-size: 11px;
+    //Had to add another black here - do we want to simplify?
+    color: variables.$text--black;
 }
