--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,5 +11,5 @@
 
 @import '../assets/fonts/style.css';
 @import 'https://use.typekit.net/kuq1xhl.css';
-@import 'https://fonts.googleapis.com/css?family=Barlow';
+@import 'https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
