--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,10 +5,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+body,
+.body {
   color: variables.$text--primary;
   font-family: variables.$font--secondary !important;
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: -0.41px;
   line-height: 24px;
   font-weight: 400;
@@ -26,31 +27,36 @@ h6 {
   margin-block-end: 0.1em;
 }
 
-h1 {
+h1,
+.display {
   font-size: 40px;
   letter-spacing: 0.4px;
   line-height: 48px;
 }
 
-h2 {
+h2,
+.giant {
   font-size: 34px;
   letter-spacing: 0.3px;
   line-height: 40px;
 }
 
-h3 {
+h3,
+.header {
   font-size: 28px;
   letter-spacing: 0.24px;
   line-height: 34px;
 }
 
-h4 {
+h4,
+.subheader {
   font-size: 24px;
   letter-spacing: 0.2px;
   line-height: 28px;
 }
 
-h5 {
+h5,
+.lead {
   color: variables.$grey-2;
   font-size: 20px;
   letter-spacing: 0.18px;
@@ -76,13 +82,13 @@ h6 {
   font-weight: 700;
 }
 
-.text-caption-1 {
+.caption {
   font-size: 13px;
   letter-spacing: -0.09px;
   line-height: 18px;
 }
 
-.text-caption-2 {
+.caption-small {
   font-size: 11px;
   letter-spacing: -0.09px;
   line-height: 15px;
