update colors based on hi-fi mockup vars

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -172,7 +172,7 @@ $shadows: (
   }
 
   &::before {
-    background-color: variables.$grey-6;
+    background-color: variables.$secondary-hover;
   }
 
   &::after {
