--- a/src/styles/components/radio.scss
+++ b/src/styles/components/radio.scss
@@ -29,7 +29,7 @@
     width: 28px;
     border-radius: 100%;
     margin-right: 12px;
-    border: 1px solid variables.$grey-4;
+    border: 1px solid variables.$grey-20;
     user-select: none;
     z-index: 1;
     &:after {
@@ -74,7 +74,7 @@
   &.hovered,
   &.active {
     .radio-button {
-      background-color: variables.$grey-5;
+      background-color: variables.$secondary-background;
     }
   }
 }
