--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -40,29 +40,27 @@ $background: #f7f8fa;
 $popup-background: rgba(0, 0, 0, 0.75);
 
 $white: #ffffff;
-$primary: #024dfd;
+$black: #090422;
 $error: #fb4e4e;
 $warning: #f6a609;
 $success: #2ac769;
 
-$primary-101: #0035b0;
-$primary-100: #024dfd;
-$primary-80: #6680ee;
-$primary-60: #8a9df0;
-$primary-40: #acbbf3;
-$primary-20: #d0d8f5;
-$primary-10: #e3e7f7;
-$primary-5: #ebeef7;
+$primary: #024dfd;
+$primary-hover: #0035b0;
+$primary-pressed: #0a2053;
 
-$grey-1: #090422;
-$grey-2: #465968;
-$grey-3: #f7f7f8;
-$grey-4: #cecdd3;
-$grey-5: #f7f8fa;
-$grey-6: #ebeef7;
-$grey-7: #e8e8e8;
+$secondary-background: #f7f7f8;
+$secondary-hover: #e8e8e8;
+$secondary-pressed: #cecdd3;
 
-$black-40: #cacccf;
+$grey-80: #465968;
+$grey-40: #8ea0ae;
+$grey-20: #cacccf;
+
+$blue-80: #6680ee;
+$blue-40: #acbbf3;
+$blue-20: #e3e7f7;
+$blue-5: #f9fafd;
 
 $colors: (
   text--primary: $text--primary,
@@ -77,20 +75,16 @@ $colors: (
   error: $error,
   warning: $warning,
   success: $success,
-  primary-101: $primary-101,
-  primary-100: $primary-100,
-  primary-80: $primary-80,
-  primary-60: $primary-60,
-  primary-40: $primary-40,
-  primary-20: $primary-20,
-  primary-10: $primary-10,
-  primary-5: $primary-5,
-  grey-1: $grey-1,
-  grey-2: $grey-2,
-  grey-3: $grey-3,
-  grey-4: $grey-4,
-  grey-5: $grey-5,
-  grey-6: $grey-6
+  primary-hover: $primary-hover,
+  primary-pressed: $primary-pressed,
+  secondary-background: $secondary-background,
+  blue-80: $blue-80,
+  blue-40: $blue-40,
+  blue-20: $blue-20,
+  blue-5: $blue-5,
+  black: $black,
+  grey-80: $grey-80,
+  grey-40: $grey-40
 );
 
 :root {
