--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,36 +1,28 @@
 @use '../abstracts/variables';
 
 // TODO: Add the rest of the text and background color classes
-.text--primary-100 {
-  color: variables.$primary-100;
+.text--primary {
+  color: variables.$text--primary;
 }
 
-.text--grey-1 {
-  color: variables.$grey-1;
+.text--primary-blue {
+  color: variables.$primary;
 }
 
-.text--grey-2 {
-  color: variables.$grey-2;
+.text--black {
+  color: variables.$black;
 }
 
-.text--grey-3 {
-  color: variables.$grey-3;
+.text--grey-80 {
+  color: variables.$grey-80;
 }
 
-.text--grey-4 {
-  color: variables.$grey-4;
+.text--grey-40 {
+  color: variables.$grey-40;
 }
 
-.text--grey-5 {
-  color: variables.$grey-5;
-}
-
-.text--grey-6 {
-  color: variables.$grey-6;
-}
-
-.grey-1 {
-  background-color: variables.$grey-1;
+.black {
+  background-color: variables.$black;
 }
 
 .text--success {
