--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -21,7 +21,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: variables.$grey-1;
+  color: variables.$black;
   font-family: variables.$font--primary !important;
   margin-block-start: 0.1em;
   margin-block-end: 0.1em;
@@ -57,14 +57,14 @@ h4,
 
 h5,
 .lead {
-  color: variables.$grey-2;
+  color: variables.$grey-80;
   font-size: 20px;
   letter-spacing: 0.18px;
   line-height: 24px;
 }
 
 h6 {
-  color: variables.$grey-2;
+  color: variables.$grey-80;
   font-size: 16px;
   letter-spacing: 0.4px;
   line-height: 20px;
