--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -27,12 +27,28 @@ $text-alignments: 'left', 'center', 'right', 'end', 'justify', 'start',
   }
 }
 
+.d-inline {
+  display: inline !important;
+}
+
 .d-block {
   display: block !important;
 }
 
 .d-inline-block {
   display: inline-block !important;
+}
+
+.d-table {
+  display: table !important;
+}
+
+.d-table-cell {
+  display: table-cell !important;
+}
+
+.d-table-row {
+  display: table-row !important;
 }
 
 .d-flex {
@@ -44,12 +60,52 @@ $text-alignments: 'left', 'center', 'right', 'end', 'justify', 'start',
   flex-wrap: nowrap;
 }
 
+.d-grid {
+  display: grid !important;
+}
+
+.d-inline-grid {
+  display: inline-grid !important;
+}
+
+.d-none {
+  display: none;
+}
+
 .flex-row {
   flex-direction: row !important;
 }
 
+.flex-row-reverse {
+  flex-direction: row-reverse !important;
+}
+
 .flex-column {
   flex-direction: column !important;
+}
+
+.flex-column-reverse {
+  flex-direction: column-reverse !important;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
+}
+
+.align-start {
+  align-items: flex-start;
+}
+
+.align-end {
+  align-items: flex-end;
 }
 
 .align-center {
@@ -60,12 +116,80 @@ $text-alignments: 'left', 'center', 'right', 'end', 'justify', 'start',
   align-items: stretch;
 }
 
+.align-baseline {
+  align-items: baseline;
+}
+
 .justify-space-between {
   justify-content: space-between;
 }
 
 .justify-space-around {
   justify-content: space-around;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-space-evenly {
+  justify-content: space-evenly;
+}
+
+.align-content-start {
+  align-content: flex-start;
+}
+
+.align-content-end {
+  align-content: flex-end;
+}
+
+.align-content-center {
+  align-content: center;
+}
+
+.align-content-stretch {
+  align-content: stretch;
+}
+
+.align-content-space-between {
+  align-content: space-between;
+}
+
+.align-content-space-around {
+  align-content: space-around;
+}
+
+.align-self-start {
+  align-self: flex-start;
+}
+
+.align-self-end {
+  align-self: flex-end;
+}
+
+.align-self-center {
+  align-self: center;
+}
+
+.align-self-stretch {
+  align-self: stretch;
+}
+
+.align-self-baseline {
+  align-self: baseline;
+}
+
+.align-self-auto {
+  align-self: auto;
 }
 
 a {
