--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -107,3 +107,20 @@ h6 {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.text-decoration-overline {
+  text-decoration: overline;
+}
+
+.text-decoration-underline {
+  text-decoration: underline;
+}
+
+.text-decoration-line-through,
+.text-decoration-strikethrough {
+  text-decoration: line-through;
+}
