add test and stories for v-tooltip

--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -26,7 +26,7 @@ $background: #090422;
     align-items: center;
   }
 
-  .tooltip-inner::after {
+  .tooltip-content::after {
     content: '';
     position: absolute;
     width: 0;
@@ -42,7 +42,7 @@ $background: #090422;
       margin-bottom: 13px;
     }
 
-    .tooltip-inner::after {
+    .tooltip-content::after {
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-top: 5px solid $background;
@@ -60,7 +60,7 @@ $background: #090422;
       margin-left: 13px;
     }
 
-    .tooltip-inner::after {
+    .tooltip-content::after {
       border-top: 5px solid transparent;
       border-bottom: 5px solid transparent;
       border-right: 5px solid $background;
@@ -79,7 +79,7 @@ $background: #090422;
       margin-top: 13px;
     }
 
-    .tooltip-inner::after {
+    .tooltip-content::after {
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-bottom: 5px solid $background;
@@ -96,7 +96,7 @@ $background: #090422;
       margin-right: 13px;
     }
 
-    .tooltip-inner::after {
+    .tooltip-content::after {
       border-top: 5px solid transparent;
       border-bottom: 5px solid transparent;
       border-left: 5px solid $background;
@@ -106,106 +106,3 @@ $background: #090422;
     }
   }
 }
-
-// .tooltip-box {
-//   position: relative;
-//   display: inline-block;
-
-//   &:hover .tooltip {
-//     opacity: 1;
-//   }
-
-//   .tooltip {
-//     position: absolute;
-//     padding: 5px;
-//     border-radius: 4px;
-//     opacity: 0;
-//     transition: opacity 0.7s;
-//     background: $background;
-//     color: white;
-
-//     text-align: center;
-//     min-width: 83px;
-//     min-height: 34px;
-//     z-index: 1;
-//   }
-
-// .text::after {
-//   content: '';
-//   position: absolute;
-//   width: 0;
-//   height: 0;
-// }
-
-// &.top {
-// .tooltip {
-//   bottom: 100%;
-//   left: 50%;
-//   transform: translateY(-50%);
-//   transform: translateX(-50%);
-//   margin-bottom: 13px;
-// }
-
-// .text::after {
-//   border-left: 5px solid transparent;
-//   border-right: 5px solid transparent;
-//   border-top: 5px solid $background;
-//   top: 100%;
-//   left: 50%;
-//   transform: translate(-50%, -25%);
-// }
-// }
-
-// &.bottom {
-//   .tooltip {
-//     top: 100%;
-//     left: 50%;
-//     transform: translateY(-50%);
-//     transform: translateX(-50%);
-//     margin-top: 13px;
-//   }
-
-// .text::after {
-//   border-left: 5px solid transparent;
-//   border-right: 5px solid transparent;
-//   border-bottom: 5px solid $background;
-//   bottom: 100%;
-//   left: 50%;
-//   transform: translate(-50%, 25%);
-// }
-//   }
-
-//   &.right {
-// .tooltip {
-//   bottom: 50%;
-//   left: 100%;
-//   transform: translateY(50%);
-//   margin-left: 13px;
-// }
-// .text::after {
-//   border-top: 5px solid transparent;
-//   border-bottom: 5px solid transparent;
-//   border-right: 5px solid $background;
-//   bottom: 50%;
-//   right: 100%;
-//   transform: translateY(50%);
-// }
-//   }
-
-// &.left {
-//   .tooltip {
-//     bottom: 50%;
-//     right: 100%;
-//     transform: translateY(50%);
-//     margin-right: 13px;
-//   }
-// .text::after {
-//   border-top: 5px solid transparent;
-//   border-bottom: 5px solid transparent;
-//   border-left: 5px solid $background;
-//   bottom: 50%;
-//   left: 100%;
-//   transform: translateY(50%);
-// }
-//   }
-// }
