--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -38,6 +38,8 @@ $text--black: #52575C;
 $inactive: #cecdd3;
 $disabled: #f5f4fa;
 $background: #f7f8fa;
+//Do we want to add this or us the above background?
+$input-background: #f9f9fa;
 $popup-background: rgba(0, 0, 0, 0.75);
 
 $white: #ffffff;
