--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   padding-bottom: 7px;
   border-bottom:1px solid variables.$grey-7; 
+  width: 359px;
 
   &.active {
     border-bottom:1px solid variables.$primary; 
