--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -32,20 +32,21 @@
 }
 
 .prepend {
-  // *, *:before, *:after {
-  // }
+  *, *:before, *:after {
+    align-items: center;
+  }
     align-items: center;
     display: flex;
     justify-items: flex-end;
-    margin-right: 12px;
-    height: 47px;
+    margin-right: 10px;
+    height: 40px;
 }
 
 .append {
     align-items: center;
     display: flex;
     justify-items: flex-end;
-    height: 47px;
+    height: 40px;
     margin-left: auto;
   &.active {
     // *, *:before, *:after {
@@ -65,7 +66,7 @@
     flex-direction: column;
     justify-content: center;
     font-size: 15px;
-    height: 47px;
+    height: 40px;
 }
 
 .input-label {
