--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -2,13 +2,17 @@
 @use '../abstracts/mixins';
 
 .flexInput {
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
   display: flex;
   align-items: flex-end;
-  box-sizing: border-box;
   padding-bottom: 7px;
   border-bottom:1px solid variables.$grey-7; 
-  width: 359px;
-
+  width: 375px;
+  padding-left: 8px;
+  padding-right: 8px;
+  height: 53px;
   &.active {
     border-bottom:1px solid variables.$primary; 
   }
@@ -73,7 +77,7 @@
   font-size: 11px;
   line-height: 14px;
   padding-left:2px;
-  margin-bottom: 4px;;
+  margin-bottom: 4px;
   justify-content: center;
   opacity: 80%
 }
