--- a/src/styles/components/toggle.scss
+++ b/src/styles/components/toggle.scss
@@ -7,7 +7,7 @@
   display: inline-flex;
   font-size: 15px;
   line-height: 20px;
-  position: absolute;
+  // position: absolute;
 
   .label {
     margin-left: 64px;
