ensure background is transparent to stop firefox oddity

--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -92,6 +92,9 @@
 &.hovered {
   background-color: variables.$input-background
   }
+&.disabled {
+  background-color: transparent;
+}
 }
 
 .subtitle {
