--- a/src/styles/components/input--number.scss
+++ b/src/styles/components/input--number.scss
@@ -22,12 +22,22 @@
     }
   }
 
-  input {
+  input[type='number'] {
     border: none;
     border-radius: 4px;
     display: block;
     height: 100%;
     outline: none;
     padding: 8px;
+
+    -moz-appearance: textfield;
+    appearance: textfield;
+    margin: 0;
+
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
   }
 }
