use general icon tag for style

--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -27,7 +27,7 @@
     width: 28px;
     z-index: 1;
   }
-  .pi-Checkmark {
+  i {
     color: variables.$white;
     display: none;
   }
@@ -35,7 +35,7 @@
   > input:checked {
     ~ .box {
       background-color: variables.$primary;
-      .pi-Checkmark {
+      i {
         display: block;
         margin: 2px 0 0 -2px;
       }
