--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -1,108 +1,177 @@
 $background: #090422;
 
-.tooltip-box {
-  display: inline-block;
-  position: relative;
-  &:hover .tooltip {
-    opacity: 1;
-  }
+.tooltip {
+  position: absolute;
+  padding: 5px;
+  border-radius: 4px;
+  background: $background;
+  color: white;
 
-  .tooltip {
-    position: absolute;
-    padding: 5px;
-    border-radius: 4px;
-    opacity: 0;
-    transition: opacity 0.7s;
-    background: $background;
-    color: white;
+  text-align: center;
+  min-width: 83px;
+  min-height: 34px;
+  z-index: 1;
 
-    text-align: center;
-    min-width: 83px;
-    min-height: 34px;
-    z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+// NOTE: Makes the Arrow
+.tooltip-content::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+}
 
+.top {
   .tooltip-content::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-  }
-
-  &.top {
-    .tooltip {
-      bottom: 100%;
-      left: 50%;
-      transform: translateY(-50%);
-      transform: translateX(-50%);
-      margin-bottom: 13px;
-    }
-
-    .tooltip-content::after {
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-top: 5px solid $background;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, -25%);
-    }
-  }
-
-  &.right {
-    .tooltip {
-      bottom: 50%;
-      left: 100%;
-      transform: translateY(50%);
-      margin-left: 13px;
-    }
-
-    .tooltip-content::after {
-      border-top: 5px solid transparent;
-      border-bottom: 5px solid transparent;
-      border-right: 5px solid $background;
-      bottom: 50%;
-      right: 100%;
-      transform: translateY(50%);
-    }
-  }
-
-  &.bottom {
-    .tooltip {
-      top: 100%;
-      left: 50%;
-      transform: translateY(-50%);
-      transform: translateX(-50%);
-      margin-top: 13px;
-    }
-
-    .tooltip-content::after {
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-bottom: 5px solid $background;
-      bottom: 100%;
-      left: 50%;
-      transform: translate(-50%, 25%);
-    }
-  }
-  &.left {
-    .tooltip {
-      bottom: 50%;
-      right: 100%;
-      transform: translateY(50%);
-      margin-right: 13px;
-    }
-
-    .tooltip-content::after {
-      border-top: 5px solid transparent;
-      border-bottom: 5px solid transparent;
-      border-left: 5px solid $background;
-      bottom: 50%;
-      left: 100%;
-      transform: translateY(50%);
-    }
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid $background;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -25%);
   }
 }
+
+.right {
+  .tooltip-content::after {
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-right: 5px solid $background;
+    bottom: 50%;
+    right: 100%;
+    transform: translateY(50%);
+  }
+}
+
+.bottom {
+  .tooltip-content::after {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid $background;
+    bottom: 100%;
+    left: 50%;
+    transform: translate(-50%, 25%);
+  }
+}
+
+.left {
+  .tooltip-content::after {
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid $background;
+    bottom: 50%;
+    left: 100%;
+    transform: translateY(50%);
+  }
+}
+
+// .tooltip-box {
+//   display: inline-block;
+//   position: relative;
+//   &:hover .tooltip {
+//     opacity: 1;
+//   }
+
+// .tooltip {
+//   position: absolute;
+//   padding: 5px;
+//   border-radius: 4px;
+//   opacity: 0;
+//   transition: opacity 0.7s;
+//   background: $background;
+//   color: white;
+
+//   text-align: center;
+//   min-width: 83px;
+//   min-height: 34px;
+//   z-index: 1;
+
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+//   .tooltip-content::after {
+//     content: '';
+//     position: absolute;
+//     width: 0;
+//     height: 0;
+//   }
+
+//   &.top {
+// .tooltip {
+//   bottom: 100%;
+//   left: 50%;
+//   transform: translateY(-50%);
+//   transform: translateX(-50%);
+//   margin-bottom: 13px;
+// }
+
+// .tooltip-content::after {
+//   border-left: 5px solid transparent;
+//   border-right: 5px solid transparent;
+//   border-top: 5px solid $background;
+//   top: 100%;
+//   left: 50%;
+//   transform: translate(-50%, -25%);
+// }
+//   }
+
+//   &.right {
+// .tooltip {
+//   bottom: 50%;
+//   left: 100%;
+//   transform: translateY(50%);
+//   margin-left: 13px;
+// }
+
+// .tooltip-content::after {
+//   border-top: 5px solid transparent;
+//   border-bottom: 5px solid transparent;
+//   border-right: 5px solid $background;
+//   bottom: 50%;
+//   right: 100%;
+//   transform: translateY(50%);
+// }
+//   }
+
+//   &.bottom {
+//     .tooltip {
+//       top: 100%;
+//       left: 50%;
+//       transform: translateY(-50%);
+//       transform: translateX(-50%);
+//       margin-top: 13px;
+//     }
+
+//     .tooltip-content::after {
+//       border-left: 5px solid transparent;
+//       border-right: 5px solid transparent;
+//       border-bottom: 5px solid $background;
+//       bottom: 100%;
+//       left: 50%;
+//       transform: translate(-50%, 25%);
+//     }
+//   }
+//   &.left {
+//     .tooltip {
+//       bottom: 50%;
+//       right: 100%;
+//   transform: translateY(50%);
+//   margin-right: 13px;
+//     }
+
+//     .tooltip-content::after {
+//       border-top: 5px solid transparent;
+//       border-bottom: 5px solid transparent;
+//       border-left: 5px solid $background;
+//       bottom: 50%;
+//       left: 100%;
+//       transform: translateY(50%);
+//     }
+//   }
+// }
