--- a/src/styles/components/textarea.scss
+++ b/src/styles/components/textarea.scss
@@ -4,6 +4,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  font-family: variables.$font--secondary;
   .label-wrapper {
     padding-bottom: 16px;
     .title {
